checkstyle violatons fix