@@ -1,67 +1,80 @@
 package core.basesyntax;
 
 import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
 
 public class WorkWithFile {
-    public static final int INDEX_OF_CATEGORY = 0;
-    public static final int INDEX_OF_VALUE = 1;
-    public static final int LENGTH_OF_ARRAY = 2;
-    public static final int SUPPLY = 0;
-    public static final int BUY = 1;
+    private static final int LENGTH_OF_ARRAY = 2;
+    private static final int SUPPLY_INDEX = 0;
+    private static final int BUY_INDEX = 1;
+    private static final String SUPPLY = "supply";
+    private static final String BUY = "buy";
+    private static final String SEPARATOR = ",";
 
-    public void getStatistic(String fromFileName, String toFileName) {
+    public String getStatistic(String fromFileName, String toFileName) {
+        int[] statistics;
+
         try {
-            int[] statistics = parseInformationFromFile(fromFileName);
-            String report = buildReport(statistics);
+            statistics = parseInformationFromFile(fromFileName);
+        } catch (IOException e) {
+            throw new RuntimeException("Can't read data from file: " + fromFileName, e);
+        }
+
+        String report = buildReport(statistics);
+
+        try {
             writeReport(toFileName, report);
         } catch (IOException e) {
-            throw new RuntimeException("I/O error while processing files: "
-                    + fromFileName + " or " + toFileName, e);
+            throw new RuntimeException("Can't write report to file: " + toFileName, e);
         }
+
+        return report;
     }
 
     private int[] parseInformationFromFile(String fromFileName) throws IOException {
         int[] result = new int[LENGTH_OF_ARRAY];
-        BufferedReader reader = new BufferedReader(new FileReader(fromFileName));
-        String line;
 
-        while ((line = reader.readLine()) != null) {
-            String[] separatedLine = line.trim().split(",");
-            try {
-                switch (separatedLine[INDEX_OF_CATEGORY]) {
-                    case "supply" -> result[SUPPLY]
-                            += Integer.parseInt(separatedLine[INDEX_OF_VALUE]);
-                    case "buy" -> result[BUY]
-                            += Integer.parseInt(separatedLine[INDEX_OF_VALUE]);
-                    default -> System.out.println("Unknown operation.");
-                }
-            } catch (ArrayIndexOutOfBoundsException e) {
-                throw new RuntimeException("Can't process .CSV file...", e);
+        try (BufferedReader reader = Files.newBufferedReader(Path.of(fromFileName))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                parseLine(line, result);
             }
         }
+
         return result;
     }
 
+    private void parseLine(String line, int[] result) {
+        String[] parts = line.trim().split(SEPARATOR, 2);
+        if (parts.length != 2) {
+            throw new RuntimeException("Invalid line: " + line);
+        }
+
+        String operation = parts[0].trim();
+        int value;
+        try {
+            value = Integer.parseInt(parts[1].trim());
+        } catch (NumberFormatException e) {
+            throw new RuntimeException("Invalid number in line: " + line, e);
+        }
+
+        switch (operation) {
+            case SUPPLY -> result[SUPPLY_INDEX] += value;
+            case BUY -> result[BUY_INDEX] += value;
+            default -> throw new RuntimeException("Unknown operation: " + operation);
+        }
+    }
+
     private String buildReport(int[] statistics) {
-        String lineSeparator = System.lineSeparator();
-        return new StringBuilder()
-                .append("supply,").append(statistics[0]).append(lineSeparator)
-                .append("buy,").append(statistics[1]).append(lineSeparator)
-                .append("result,").append(statistics[0] - statistics[1])
-                .toString();
+        int result = statistics[SUPPLY_INDEX] - statistics[BUY_INDEX];
+        return "supply," + statistics[SUPPLY_INDEX] + System.lineSeparator()
+                + "buy," + statistics[BUY_INDEX] + System.lineSeparator()
+                + "result," + result + System.lineSeparator();
     }
 
     private void writeReport(String toFileName, String content) throws IOException {
-        Files.write(
-                Path.of(toFileName),
-                content.getBytes(),
-                StandardOpenOption.CREATE,
-                StandardOpenOption.TRUNCATE_EXISTING
-        );
+        Files.writeString(Path.of(toFileName), content);
     }
 }
